Fix dashicon align inside buttons (Closes: #386)
Set the vertical align of dashicon icons to middle so that they are inline with button text.

--- a/style/database.css
+++ b/style/database.css
@@ -28,7 +28,7 @@
 }
 
 span.dashicons-external {
-  line-height: unset;
+  line-height: 1.4;
   padding-left: 3px;
 }
 
